--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = upesy_wroom
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	FastLED
+	iakop/LiquidCrystal_I2C_ESP32@^1.1.6
